syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto
// PATH="${PATH}:${HOME}/go/bin" protoc --go_out=plugins=grpc:. *.proto

option go_package = "pinterest/services/user/proto";


package user;

message UserReg {
  string  Username = 1;
  string  Password = 2;
  string  FirstName = 3;
  string  LastName = 4;
  string  Email = 5;
}

message UserEditInput {
  uint64  UserID = 1;
  string  Username = 2;
  string  FirstName = 3;
  string  LastName = 4;
  string  Email = 5;
}

message UserAuth {
  string  Username = 1;
  string  Password = 2;
}

message UserOutput {
  uint64   UserID = 1;
  string  Username = 2;
  string  Email = 3;
  string  AvatarPath = 4;
  string  FirstName = 5;
  string  LastName = 6;
}

message UsersListOutput {
  repeated UserOutput Users = 1;
}


message UserID {
  uint64 uid = 1;
}

message Username {
  string username = 1;
}

message SearchInput {
  string keyWords = 1;
}

message UpdateAvatarRequest {
  oneof data {
    uint64 user_id = 1;
    string filename = 2;
    bytes chunk = 3;
  }
}

message Empty {}

service User {
  rpc   CreateUser(UserReg) returns (UserID) {}
  rpc   EditUser(UserEditInput) returns (Empty) {}
  rpc   UpdateAvatar(stream UpdateAvatarRequest) returns (Empty) {}
  // rpc   DeleteUser(UserID) returns (Empty) {}
  rpc   GetUserByID(UserID) returns (UserOutput) {}
  rpc   GetUserByUsername(Username) returns (UserOutput) {}
  rpc   GetUsers(Empty) returns (UsersListOutput) {}
  }